[project]
name = "uns_graphql"
version = "0.9.3"
description = "Provide GraphQL capabilities to the UNS across all data sources -MQTT, KAFKA, Historian & GraphDB"
authors = [{ name = "Ashwin Krishnan", email = "mkashwin@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
license = { text = "MIT" }
maintainers = [
    { name = "Himanshu Dhami", email = "himanshudhami@gmail.com" },
    { name = "Johan Jeppson", email = "logic4human@gmail.com" },
]
keywords = [
    "uns",
    "graphql",
    "mqtt",
    "graphDB",
    "historian",
    "kafka",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Development Status :: 4 - Beta",
    "Topic :: Communications",
    # "Topic :: Software Development :: Libraries :: UNS GraphQL",
    # "Topic :: Industry 4.0 :: Unified Name Space :: UNS GraphQL Resolver",
]
dependencies = [
    "logger~=1.4",
    "dynaconf~=3.2",
    "strawberry-graphql[fastapi, cli]>=0.260,<0.279",
    "aiohttp~=3.11",
    "uvicorn[standard]>=0.34,<0.36",
    "aiomqtt>=2.4.0,<3",
    "confluent-kafka>=2.9.0,<3",
    "neo4j~=5.27",
    "asyncpg>=0.30,<0.31",
    "psutil>=6.1.1,<8",
]

[project.urls]
Repository = "https://github.com/mkashwin/unifiednamespace/tree/main/07_uns_graphql"

[project.scripts]
uns_graphql_app = "uns_graphql.uns_graphql_app:main"
uns_graphql_healthcheck = "uns_graphql.health_check:main"

[dependency-groups]
main = ["uns-mqtt"]
test = [
    "strawberry-graphql[debug-server]>=0.260,<0.279",
    "pytest>=8.3.4,<9",
    "pytest-xdist>=3.6.1,<4",
    "pytest-asyncio>=0.25,<0.26",
    "pytest-timeout>=2.3.1,<3",
    "pytest-cov>=6.0.0,<7",
     "safety>=3.4.0,<4",
    "pytest-retry>=1.7.0,<2",
]

[tool.uv]
default-groups = [
    "main",
    "test",
]

[tool.uv.sources]
uns-mqtt = { path = "../02_mqtt-cluster", editable = true }

[tool.hatch.build.targets.sdist]
include = ["src/uns_graphql"]

[tool.hatch.build.targets.wheel]
include = ["src/uns_graphql"]

[tool.hatch.build.targets.wheel.sources]
"src/uns_graphql" = "uns_graphql"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
norecursedirs = [".git", "build", "node_modules", "env*", "tmp*"]
testpaths = ["test"]
markers = ["integrationtest: mark a test as an integration test"]
addopts = "-n 6 --dist loadgroup --timeout=300 --retries 1  --retry-delay 1 --durations=10 --full-trace --timeout-method=thread"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
# Extend the `pyproject.toml` file in the parent directory...
extend = "../pyproject.toml"
