[project]
name = "uns_mcp"
version = "0.9.38"
description = "MCP Server for Unified Name Space (UNS) to provide interoperability AI Agents and applications"
readme = "README.md"
authors = [{ name = "Ashwin Krishnan", email = "mkashwin@gmail.com" }]
requires-python = ">=3.14, <4"
license = "MIT"
maintainers = [
    { name = "Himanshu Dhami", email = "himanshudhami@gmail.com" }, 
]
keywords = [
    "uns",
    "mcp",
    "ai",
    "llm",
]
classifiers = [
    # "License :: OSI Approved :: MIT License",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Development Status :: 4 - Beta",
    "Topic :: Communications",
    # "Topic :: Software Development :: Libraries :: UNS GraphQL",
    # "Topic :: Industry 4.0 :: Unified Name Space :: UNS GraphQL Resolver",
]
dependencies = [
    "logger~=1.4",
    "dynaconf~=3.2",
    "neo4j~=6.0",
    "asyncpg>=0.30,<0.32",    
    "httpx>=0.28.1",
    "mcp[cli]>=1.23.2",
]
[dependency-groups]
main = [

]
    
test = [
    "pytest>=8.3.4,<10",
    "pytest-xdist>=3.6.1,<4",
    "pytest-asyncio>=0.25,<1.4",
    "pytest-timeout>=2.3.1,<3",
    "pytest-cov>=6.0.0,<8",
    "safety>=3.4.0,<4",
    "pytest-retry>=1.7.0,<2",
]

[tool.uv]
default-groups = [
    "main",
    "test",
]

[tool.hatch.build.targets.sdist]
include = ["src/uns_mcp"]

[tool.hatch.build.targets.wheel]
include = ["src/uns_mcp"]

[tool.hatch.build.targets.wheel.sources]
"src/uns_mcp" = "uns_mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
norecursedirs = [".git", "build", "node_modules", "env*", "tmp*"]
testpaths = ["test"]
markers = ["integrationtest: mark a test as an integration test"]
addopts = " -n auto --dist loadgroup --timeout=300 --retries 1  --retry-delay 1 --durations=10 --full-trace --timeout-method=thread"
asyncio_default_fixture_loop_scope = "function"


[tool.ruff]
# Extend the `pyproject.toml` file in the parent directory...
extend = "../pyproject.toml"
