[project]
name = "uns-simulator"
version = "0.9.38"
description = "Simulator to publishing messages into the UNS"
authors = [{ name = "Ashwin Krishnan", email = "mkashwin@gmail.com" }]
requires-python = ">=3.14, <4"
readme = "README.md"
license = { text = "MIT" }
maintainers = [
    { name = "Himanshu Dhami", email = "himanshudhami@gmail.com" },
    { name = "Johan Jeppson", email = "logic4human@gmail.com" },
]
keywords = [
    "uns",
    "simulator",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Manufacturing",
    "Programming Language :: Python",
     "Development Status :: 4 - Beta",
     "Topic :: Communications",
]
dependencies = [
    "logger~=1.4",
    "aiomqtt>=2.4.0,<3",
    "dynaconf~=3.2",

]

[project.urls]
Repository = "https://github.com/mkashwin/unifiednamespace/tree/main/99_simulator"

[project.scripts]
uns_simulator = "uns_simulator.main:run_simulator"

[dependency-groups]
test = [
    "pytest>=8.3.4,<10",
    "pytest-xdist>=3.6.1,<4",
    "pytest-asyncio>=0.25,<1.4",
    "pytest-timeout>=2.3.1,<3",
    "pytest-cov>=6.0.0,<8",
    "safety>=3.4.0,<4",
]

[tool.uv]
default-groups = ["test"]

[tool.hatch.build.targets.sdist]
include = [
    "src/uns_simulator",
]

[tool.hatch.build.targets.wheel]
include = [
    "src/uns_simulator",
]

[tool.hatch.build.targets.wheel.sources]
"src/uns_simulator" = "uns_simulator"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
norecursedirs = [".git", "build", "node_modules", "env*", "tmp*"]
testpaths = ["test"]
markers = ["integrationtest: mark a test as an integration test"]
addopts = "-n auto --timeout=300 --durations=10"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
# Extend the `pyproject.toml` file in the parent directory...
extend = "../pyproject.toml"
